# luckier-commit

./: .gitignore  Cargo.toml  README.md  git-luckier-commit  git-luckier-commit-tree  git-luckier-merge  git-luckier-pick  git-luckier-rebase  git-luckier-revert  git-luckilize
src/: benchmark.rs  bin-filter.rs  bin.rs  lib.rs  tests.rs
