[package]
name = "luckier_commit"
version = "2.1.0"
authors = ["b1f6c1c4 <b1f6c1c4@gmail.com>", "Teddy Katz <teddy.katz@gmail.com>"]
edition = "2018"
description = "Make your git commits luckier every time!"
repository = "https://github.com/b1f6c1c4/luckier-commit"
license = "MIT"
resolver = "2"
include = ["src/**/*", "Cargo.*", "LICENSE.md", "README.md"]

[lib]
name = "luckier_commit"
path = "src/lib.rs"

[features]
default = ["opencl"]
opencl = ["ocl"]

[[bin]]
name = "luckier_commit"
path = "src/bin.rs"

[dependencies]
num_cpus = "1.0"
ocl = { version = "0.19", optional = true }

# See https://github.com/RustCrypto/hashes/issues/315
[target.'cfg(target_env = "msvc")'.dependencies]
"sha-1" = { version = "0.10", "default-features" = false, features = ["compress"] }
"sha2" = { version = "0.10", "default-features" = false, features = ["compress"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
"sha-1" = { version = "0.10", "default-features" = false, features = ["asm", "compress"] }
"sha2" = { version = "0.10", "default-features" = false, features = ["asm", "compress"] }

[profile.release]
lto = true
